test/fixtures/compile/echo/echo.atthis.func.error
SyntaxError: Unexpected "@" (fixtures/compile/echo/echo.atthis.func.ks:2:7)