test/fixtures/compile/echo/echo.atthis.method.ks
class Foobar {
	private {
		@x: Number = 0
	}
	foobar() {
		echo(@x)
	}
}